# SP2024

./: CMakeLists.txt  README.md  codeforce.cpp  main.cpp
AUD/AUD10/: t2.cpp  t4.cpp
AUD/AUD11/: t3.cpp  t8.cpp
AUD/AUD2/: t3.cpp
AUD/AUD3/: t3.cpp  t4.cpp  t5.cpp
AUD/AUD4/: readme.md  t3.cpp
AUD/AUD5/: m1.cpp  m2.cpp  t4.cpp  t6.cpp  t8.cpp
AUD/AUD6/: t3.cpp  t4_1.cpp  t5.cpp
AUD/AUD7/: t2.cpp  t4.cpp
AUD/AUD8/: t1.cpp  t2.cpp  t2_1.cpp  t4.cpp
AUD/AUD9/: t1.cpp  t2.cpp  t6.cpp  t9.cpp
AUDITORY/aud10/: Auditory_Excercises_10.cpp
AUDITORY/aud2/: Auditory_Excercises_2.cpp
AUDITORY/aud4/: Auditoy_Excercises_4.cpp
AUDITORY/aud6/: Auditory_Excercises_6.cpp  Auditory_Excercises_6_Functions_H.cpp
AUDITORY/aud7/: Auditory_Excercises_7.cpp
AUDITORY/aud9/: Auditory_Excercises_9.cpp
EXCERCISES FOR THE FIRST PARIAL EXAM/FirstPartialExamExcercises/: first_partial_10.cpp  first_partial_4.cpp  first_partial_7.cpp  first_partial_8.cpp  first_partial_9.cpp
EXCERCISES FOR THE FIRST PARIAL EXAM/FirstPartialExamExcercisesMK/: kolokf.zadaca.10.cpp  kolokf.zadaca.11.cpp  kolokf.zadaca.12.cpp  kolokf.zadaca.13.cpp  kolokf.zadaca.2.cpp  kolokf.zadaca.4.cpp  kolokf.zadaca.6.cpp  kolokf.zadaca.7.cpp  kolokf.zadaca.8.cpp  kolokf.zadaca.9.cpp
EXERCISES FOR THE SECOND PARTIAL EXAM/exercises/: ex1.cpp  ex10.cpp  ex12.cpp  ex13.cpp  ex4.cpp  ex5.cpp  ex7.cpp  ex8.cpp
EXERCISES FOR THE SECOND PARTIAL EXAM/second_partial/: second_partial_14.cpp  second_partial_16.cpp  second_partial_19.cpp  second_partial_21.cpp  second_partial_24.cpp  second_partial_25.cpp  second_partial_3.cpp  test.cpp  test2.cpp
EXERCISES FOR THE SECOND PARTIAL EXAM/second_partial_2023-24/: second_partial_10_23-24.cpp  second_partial_2_23-24.cpp  second_partial_3_23-24.cpp  second_partial_4_23-24.cpp  second_partial_6_23-24.cpp  second_partial_9_23-24.cpp
EXERCISES FOR THE SECOND PARTIAL EXAM/second_partial_additional/: fibo.cpp
EXERCISES FOR THE SECOND PARTIAL EXAM/second_partial_mk/: second_partial_13_mk.cpp  second_partial_14_mk.cpp  second_partial_15_mk.cpp  second_partial_17_mk.cpp  second_partial_18_mk.cpp  second_partial_19_mk.cpp  second_partial_1_mk.cpp  second_partial_7_mk.cpp  second_partial_8_mk.cpp  second_partial_9_mk.cpp
EXERCISES FOR THE SECOND PARTIAL EXAM/second_partial_mk_extra/: second_partial_mk_extra_10.cpp  second_partial_mk_extra_12.cpp  second_partial_mk_extra_8.cpp
Exams/: index.md  readme.md
Exams/EXAM-QUESTIONS-2024/: create_files.py  question_1.cpp  question_10.cpp  question_11.cpp  question_12.cpp  question_2.cpp  question_3.cpp  question_4.cpp  question_5.cpp  question_6.cpp  question_7.cpp  question_8.cpp  question_9.cpp  tasks_descriptions.md
Exams/EXAM-QUESTIONS-2025-JUNE/: create_files.py  question_1.cpp  question_2.cpp  question_3.cpp  question_4.cpp  question_5.cpp  question_6.cpp  tasks_descriptions.md
Exams/FIRST-MIDTERM-EN/: first_partial_1.cpp  first_partial_10.cpp  first_partial_11.cpp  first_partial_12.cpp  first_partial_13.cpp  first_partial_2.cpp  first_partial_3.cpp  first_partial_4.cpp  first_partial_5.cpp  first_partial_6.cpp  first_partial_7.cpp  first_partial_8.cpp  readme.md
Exams/FIRST-MIDTERM-MK/: create_files.py  task_1.cpp  task_10.cpp  task_11.cpp  task_12.cpp  task_13.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp  task_descriptions.md
Exams/SECOND-MIDTERM-ADDITIONAL/: readme.md  second_partial_mk_extra_2.cpp  second_partial_mk_extra_4.cpp  second_partial_mk_extra_5.cpp
Exams/SECOND-MIDTERM-EN/: readme.md  second_partial_13.cpp  second_partial_15.cpp  second_partial_17.cpp  second_partial_26.cpp  second_partial_28.cpp  second_partial_6.cpp  second_partial_9.cpp
Exams/SECOND-MIDTERM-MK/: create_files.py  readme.md  task_1.cpp  task_10.cpp  task_11.cpp  task_12.cpp  task_13.cpp  task_14.cpp  task_15.cpp  task_16.cpp  task_17.cpp  task_18.cpp  task_19.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
Exams/Structured_Programming/AUD10/: readme.md  t1.cpp  t3.cpp  t5.cpp
Exams/Structured_Programming/AUD11/: readme.md  t1.cpp  t2.cpp  t4.cpp  t5.cpp  t6.cpp  t7.cpp
Exams/Structured_Programming/AUD2/: readme.md  t1.cpp  t2.cpp  t4.cpp  t5.cpp
Exams/Structured_Programming/AUD3/: aud3.md  t1.cpp  t2.cpp  t6.cpp
Exams/Structured_Programming/AUD4/: t1.cpp  t2.cpp
Exams/Structured_Programming/AUD5/: m3.cpp  readme.md  t1.cpp  t2.cpp  t3.cpp  t4_1.cpp  t5.cpp  t7.cpp  t9.cpp
Exams/Structured_Programming/AUD6/: aud6.md  t1.cpp  t2.cpp  t4.cpp  t6.cpp
Exams/Structured_Programming/AUD7/: readme.md  t1.cpp  t2_1.cpp  t3.cpp  t5.cpp  t6.cpp  t7.cpp
Exams/Structured_Programming/AUD8/: readme.md  t3.cpp
Exams/Structured_Programming/AUD9/: aud9.md  t10.cpp  t2_1.cpp  t3.cpp  t5.cpp  t7.cpp  t8.cpp
Exams/Structured_Programming/Excercises/: README_5.md
Exams/past_exams/: README_6.md
Exams/past_exams/r1/: readme.md  t1.cpp  t3.cpp
Exams/past_exams/r2/: readme.md  t1.cpp
Exams/past_exams/r3/: readme.md  t2.cpp
Exams/past_exams/r4/: readme.md  t1.cpp  t2.cpp  t3.cpp  t4.cpp  t6.cpp
LAB/lab1/: Laboratory_Excercises_1.cpp  task_2.cpp  task_3.cpp
LAB/lab2/: Laboratory_Excercises_2.cpp
LAB/lab3/: Labotory_Excercises_3_Monday.cpp  lab3.md  task_2.cpp
LAB/lab4/: task_1.cpp  task_3.cpp
LAB/lab5/: task_3.cpp
LAB/lab6/: Laboratory_Excercises_6.cpp  task_1.cpp  task_2.cpp
LAB/lab7/: Laboratory_Excercises_7.cpp  task_1.cpp  task_2.cpp
LECTURES/Lecture1/: variablesAndOperators.cpp
LECTURES/Lecture5/predKolokfiumski/: predkolokfiumski.cpp
LECTURES/Lecture6/: arrays.cpp  bubbleSortAlgorithm.cpp  deletingElementInArray.cpp  searchingElementInArray.cpp  selectionSortAlgorithm.cpp
LECTURES/Lecture7/: recursion.cpp
src/AUDITORY/aud1/: Auditory_Excercises_1.cpp  Excercises_1.cpp  first_program.cpp
src/AUDITORY/aud11/: Auditory_Excercises_11.cpp
src/AUDITORY/aud12/: Auditory_Excercises_12.cpp  test.cpp
src/AUDITORY/aud3/: Auditory_Excercises_3.cpp  labs1.cpp
src/LAB/: labs.md
src/LAB/lab1/: readme.md  (+1 more)
(+107 files in other folders)
