cmake_minimum_required(VERSION 3.29)
project(SP2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(SP2024 main.cpp)
add_executable(test second_partial/test.cpp)
add_executable(test2 second_partial/test2.cpp)
add_executable(second1 second_partial/second_partial_1.cpp)
add_executable(second2 second_partial/second_partial_2.cpp)
add_executable(second3 second_partial/second_partial_3.cpp)
add_executable(second4 second_partial/second_partial_4.cpp)
add_executable(second5 second_partial/second_partial_5.cpp)
add_executable(second6 second_partial/second_partial_6.cpp)
add_executable(second7 second_partial/second_partial_7.cpp)
add_executable(second8 second_partial/second_partial_8.cpp)
add_executable(second9 second_partial/second_partial_9.cpp)
add_executable(second10 second_partial/second_partial_10.cpp)
add_executable(second11 second_partial/second_partial_11.cpp)
add_executable(second12 second_partial/second_partial_12.cpp)
add_executable(second13 second_partial/second_partial_13.cpp)
add_executable(second14 second_partial/second_partial_14.cpp)
add_executable(second15 second_partial/second_partial_15.cpp)
add_executable(second16 second_partial/second_partial_16.cpp)
add_executable(second17 second_partial/second_partial_17.cpp)
add_executable(second18 second_partial/second_partial_18.cpp)
add_executable(second19 second_partial/second_partial_19.cpp)
add_executable(second20 second_partial/second_partial_20.cpp)
add_executable(second21 second_partial/second_partial_21.cpp)
add_executable(second22 second_partial/second_partial_22.cpp)
add_executable(second23 second_partial/second_partial_23.cpp)
add_executable(second24 second_partial/second_partial_24.cpp)
add_executable(second25 second_partial/second_partial_25.cpp)
add_executable(second26 second_partial/second_partial_26.cpp)
add_executable(second27 second_partial/second_partial_27.cpp)
add_executable(second28 second_partial/second_partial_28.cpp)
add_executable(second29 second_partial/second_partial_29.cpp)
add_executable(second30 second_partial/second_partial_30.cpp)
add_executable(second31 second_partial/second_partial_31.cpp)
add_executable(second32 second_partial/second_partial_32.cpp)
add_executable(second33 second_partial/second_partial_33.cpp)

add_executable(secondmk1 second_partial_mk/second_partial_1_mk.cpp)
add_executable(secondmk2 second_partial_mk/second_partial_2_mk.cpp)
add_executable(secondmk3 second_partial_mk/second_partial_3_mk.cpp)
add_executable(secondmk4 second_partial_mk/second_partial_4_mk.cpp)
add_executable(secondmk5 second_partial_mk/second_partial_5_mk.cpp)
add_executable(secondmk6 second_partial_mk/second_partial_6_mk.cpp)
add_executable(secondmk7 second_partial_mk/second_partial_7_mk.cpp)
add_executable(secondmk8 second_partial_mk/second_partial_8_mk.cpp)
add_executable(secondmk9 second_partial_mk/second_partial_9_mk.cpp)
add_executable(secondmk10 second_partial_mk/second_partial_10_mk.cpp)
add_executable(secondmk11 second_partial_mk/second_partial_11_mk.cpp)
add_executable(secondmk12 second_partial_mk/second_partial_12_mk.cpp)
add_executable(secondmk13 second_partial_mk/second_partial_13_mk.cpp)
add_executable(secondmk14 second_partial_mk/second_partial_14_mk.cpp)
add_executable(secondmk15 second_partial_mk/second_partial_15_mk.cpp)
add_executable(secondmk16 second_partial_mk/second_partial_16_mk.cpp)
add_executable(secondmk17 second_partial_mk/second_partial_17_mk.cpp)
add_executable(secondmk18 second_partial_mk/second_partial_18_mk.cpp)
add_executable(secondmk19 second_partial_mk/second_partial_19_mk.cpp)

add_executable(secondmkxtra1 second_partial_mk_extra/second_partial_mk_extra_1.cpp)
add_executable(secondmkxtra2 second_partial_mk_extra/second_partial_mk_extra_2.cpp)
add_executable(secondmkxtra3 second_partial_mk_extra/second_partial_mk_extra_3.cpp)
add_executable(secondmkxtra4 second_partial_mk_extra/second_partial_mk_extra_4.cpp)
add_executable(secondmkxtra5 second_partial_mk_extra/second_partial_mk_extra_5.cpp)
add_executable(secondmkxtra6 second_partial_mk_extra/second_partial_mk_extra_6.cpp)
add_executable(secondmkxtra7 second_partial_mk_extra/second_partial_mk_extra_7.cpp)
add_executable(secondmkxtra8 second_partial_mk_extra/second_partial_mk_extra_8.cpp)
add_executable(secondmkxtra9 second_partial_mk_extra/second_partial_mk_extra_9.cpp)
add_executable(secondmkxtra10 second_partial_mk_extra/second_partial_mk_extra_10.cpp)
add_executable(secondmkxtra11 second_partial_mk_extra/second_partial_mk_extra_11.cpp)
add_executable(secondmkxtra12 second_partial_mk_extra/second_partial_mk_extra_12.cpp)

add_executable(secondPartialExam23-24_1 second_partial_2023-24/second_partial_1_23-24.cpp)
add_executable(secondPartialExam23-24_2 second_partial_2023-24/second_partial_2_23-24.cpp)
add_executable(secondPartialExam23-24_3 second_partial_2023-24/second_partial_3_23-24.cpp)
add_executable(secondPartialExam23-24_4 second_partial_2023-24/second_partial_4_23-24.cpp)
add_executable(secondPartialExam23-24_5 second_partial_2023-24/second_partial_5_23-24.cpp)
add_executable(secondPartialExam23-24_6 second_partial_2023-24/second_partial_6_23-24.cpp)
add_executable(secondPartialExam23-24_7 second_partial_2023-24/second_partial_7_23-24.cpp)
add_executable(secondPartialExam23-24_8 second_partial_2023-24/second_partial_8_23-24.cpp)
add_executable(secondPartialExam23-24_9 second_partial_2023-24/second_partial_9_23-24.cpp)
add_executable(secondPartialExam23-24_10 second_partial_2023-24/second_partial_10_23-24.cpp)
add_executable(secondPartialExam23-24_11 second_partial_2023-24/second_partial_11_23-24.cpp)
add_executable(secondPartialExam23-24_12 second_partial_2023-24/second_partial_12_23-24.cpp)

add_executable(secondPartialEP1 second_partial_additional/last_exams_1.cpp)
add_executable(secondPartialEP2 second_partial_additional/last_exams_2.cpp)
add_executable(secondPartialEP3 second_partial_additional/last_exams_3.cpp)
add_executable(secondPartialEP4 second_partial_additional/last_exams_4.cpp)

add_executable(fibonacci second_partial_additional/fibo.cpp)


add_executable(ex1 exercises/ex1.cpp)
add_executable(ex2 exercises/ex2.cpp)
add_executable(ex3 exercises/ex3.cpp)
add_executable(ex4 exercises/ex4.cpp)
add_executable(ex5 exercises/ex5.cpp)
add_executable(ex6 exercises/ex6.cpp)
add_executable(ex7 exercises/ex7.cpp)
add_executable(ex8 exercises/ex8.cpp)
add_executable(ex9 exercises/ex9.cpp)
add_executable(ex10 exercises/ex10.cpp)
add_executable(ex11 exercises/ex11.cpp)
add_executable(ex12 exercises/ex12.cpp)
add_executable(ex13 exercises/ex13.cpp)

add_executable(lab9.1 LAB/LAB_9/lab_9_task_1.cpp)
add_executable(lab9.2 LAB/LAB_9/lab_9_task_2.cpp)
add_executable(lab9.3 LAB/LAB_9/lab_9_task_3.cpp)