cmake_minimum_required(VERSION 3.29)
project(SP2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(SP2024 main.cpp)
add_executable(code codeforce.cpp)
add_executable(t1-l1 LAB/lab1/task_1.cpp)
add_executable(t2-l1 LAB/lab1/task_2.cpp)
add_executable(t3-l1 LAB/lab1/task_3.cpp)

add_executable(t1-l2 LAB/lab2/task_1.cpp)
add_executable(t2-l2 LAB/lab2/task_2.cpp)
add_executable(t3-l2 LAB/lab2/task_3.cpp)

add_executable(t1-l3 LAB/lab4/task_1.cpp)
add_executable(t2-l3 LAB/lab3/task_2.cpp)
add_executable(t3-l3 LAB/lab3/task_3.cpp)

add_executable(t1-l4 LAB/lab4/task_1.cpp)
add_executable(t2-l4 LAB/lab4/task_2.cpp)
add_executable(t3-l4 LAB/lab4/task_3.cpp)

add_executable(t1-l5 LAB/lab5/task_1.cpp)
add_executable(t2-l5 LAB/lab5/task_2.cpp)
add_executable(t3-l5 LAB/lab5/task_3.cpp)

add_executable(t1-l6 LAB/lab6/task_1.cpp)
add_executable(t2-l6 LAB/lab6/task_2.cpp)
add_executable(t3-l6 LAB/lab6/task_3.cpp)

add_executable(t1-l7 LAB/lab7/task_1.cpp)
add_executable(t2-l7 LAB/lab7/task_2.cpp)
add_executable(t3-l7 LAB/lab7/task_3.cpp)

add_executable(t1-l8 LAB/lab8/task_1.cpp)
add_executable(t2-l8 LAB/lab8/task_2.cpp)
add_executable(t3-l8 LAB/lab8/task_3.cpp)